kubernetes/apps/kube-system/metrics-server/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-metrics-server
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: metrics-server
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEntities:
        - cluster
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
